apps/argocd/post-install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.local.asztalos.net`)
      priority: 10
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
      middlewares:
        - name: argocd-headers
    - kind: Rule
      match: Host(`argocd.local.asztalos.net`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: local-asztalos-net-tls
